[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "censor"
description = "bases to prosecute"
version = "4"
authors = [
    {name = "Censor", email = "pycensor@gmail.com" },
]
readme = "README.rst"
license = { text="Public Domain"}
classifiers = [ 
               'Development Status :: 3 - Alpha',
               'License :: Public Domain',
               'Operating System :: Unix',
               'Programming Language :: Python',
               'Topic :: Utilities'
              ]


[project.urls]
"home" = "https://pypi.org/project/censor"
"bugs" = "https://github.com/pycensor/censor/issues"
"source" = "https://github.com/pycensor/censor"


[tool.setuptools]
packages = [
            "censor",
            "censor.modules"
           ]
zip-safe = true
script-files = ["bin/censor"]



[tool.setuptools.data-files]
"share/censor" = ["README.rst",]


"share/censor/img" = [
                       "img/exlamation.jpg",
                       "img/genocide.jpg",
                       "img/skull3.png",
                       "img/verbatim2.png",
                       "img/wallpaper2.png",
                       "img/wallpaper.png"
                      ]

"share/censor/pdf" = [
                       "pdf/bevestigd.pdf",
                       "pdf/EM_Ack_OTP-CR-117_19.pdf",
                       "pdf/EM_T04_OTP-CR-117_19.pdf",
                       "pdf/EM_T07_OTP-CR-117_19_001.pdf",
                       "pdf/Kamer.pdf",
                      ]

[tool.setuptools.exclude-package-data]
"*" = [
       "env*",
       "html*",
       "test*"
      ]
